fixed boss too big on large screen

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -787,6 +787,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
